--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Marine 2</title>
-    <link rel="stylesheet" href="./styles.css">
+    <!-- Style sheets -->
+    <link rel="stylesheet" href="./CSS/global.css">
+    <link rel="stylesheet" href="./CSS/resset.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+
     <link rel="icon" href="./assets/Warhammer logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +18,8 @@ rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <nav class="navbar">
             <div>
                 <img src="./assets/Warhammer logo.svg" alt="logo">
             </div>
