Hicimos el header

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body>
+    <!--  
     <header class="header">
         <nav class="navbar">
             <div>
@@ -36,6 +37,41 @@ rel="stylesheet">
         <button>Star game <span class="material-symbols-outlined">
 sports_esports
 </span></button>
+
     </header>
+  -->
+    
+    <main>
+
+        <section class="hero">
+            <div class="hero-content">
+
+                <h1>
+                    <img src="./assets/Logo space marine.png" alt="Space marine logo">
+                </h1>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est, non possimus pariatur vitae esse deleniti praesentium ad numquam ratione nemo nam necessitatibus asperiores fuga vero hic placeat optio cupiditate itaque?</p>
+
+                <div class="hero-actions">
+                    <button>Star game <span class="material-symbols-outlined">
+sports_esports
+</span></button>
+                    <button>Watch trailer <span class="material-symbols-outlined">
+sports_esports
+</span></button>
+                </div>
+
+                <div class="hero-icons">
+                    <img src="./assets/Playstation logo.svg" alt="Logo de playstation">
+                    <img src="./assets/steam logo.svg" alt="Logo steam">
+                    <img src="./assets/switch logo.svg" alt="Logo switch">
+                    <img src="./assets/xbox logo.svg" alt="Logo xbox">
+                </div>
+
+            </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
