Creamos los estilos y la seccion characters

--- a/index.html
+++ b/index.html
@@ -18,15 +18,12 @@ rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body>
-    <!--  
     <header class="header">
         <nav class="navbar">
             <div>
                 <img src="./assets/Warhammer logo.svg" alt="logo">
             </div>
-        </nav>
-
-        <ul>
+        <ul class="navbar-menu">
             <li><a href="#">Characters</a></li>
             <li><a href="#">Media</a></li>
             <li><a href="#">About</a></li>
@@ -34,12 +31,12 @@ rel="stylesheet">
             <li><a href="#">Merch</a></li>
         </ul>
 
-        <button>Star game <span class="material-symbols-outlined">
+        <button class="button-primary">Star game <span class="material-symbols-outlined">
 sports_esports
 </span></button>
-
+        </nav>
     </header>
-  -->
+  
     
     <main>
 
@@ -72,6 +69,40 @@ sports_esports
         </section>
 
     </main>
+   <section class="characters">
+                <div class="wrapper">
+
+                    <div class="characters-header">
+                        <h2>Characters</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur.</p>
+                    </div>
+
+                    <div class="charaters-content">
+                        <!-- Thumbnails -->
+                        <div class="characters-thumbnails">
+                            <ul class="thumbnail-list">
+                                <li class="thumbnails-item"><img src="./assets/thumb-1.png" alt="Character 1 Thumbnail"></li>
+                                <li class="thumbnails-item"><img src="./assets/thumb-2.png" alt="Character 2 Thumbnail"></li>
+                                <li class="thumbnails-item"><img src="./assets/thumb-3.png" alt="Character 3 Thumbnail"></li>
+                                <li class="thumbnails-item"><img src="./assets/thumb-4.png" alt="Character 4 Thumbnail"></li>
+                                <li class="thumbnails-item"><img src="./assets/thumb-5.png" alt="Character 5 Thumbnail"></li>
+                                <li class="thumbnails-item"><img src="./assets/thumb-6.png" alt="Character 6 Thumbnail"></li>
+                            </ul>
+                        </div>
+
+                        <!-- Showcase -->
+                        <div class="characters-showcase">
+                            <img  class="character-image" src="./assets/character-1 1.png" alt="Character 1 Full Image">
+                            <div class="character-info">
+                                <h3>Magnus Calgar</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
 
 </body>
 </html>
