Creamos los estilos y la seccion base de el estilo media

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ sports_esports
             </div>
         </section>
 
-    </main>
+    
    <section class="characters">
                 <div class="wrapper">
 
@@ -104,5 +104,31 @@ sports_esports
                 </div>
             </section>
 
+            <section class="media">
+                <div class="wrapper">
+                    <div class="media-header">
+                        <h2>Media</h2>
+                        <p>Loremipsum dolor sit amet</p>
+                    </div>
+
+                    <div class="carousel">
+                        <div class="carousel-track">
+                            <article class="carousel-item"><img src="./assets/image/Media-1.png" alt=""><span class="metrial-symbols-outlined">play_circle</span></article>
+
+                            <article class="carousel-item"><img src="./assets/image/Media-2.png" alt=""><span class="metrial-symbols-outlined">play_circle</span></article>
+
+                            <article class="carousel-item"><img src="./assets/image/Media-3.png" alt=""><span class="metrial-symbols-outlined">play_circle</span></article>
+
+                        </div>
+                        <div class="carousel-controls">
+                            <button><span class="material-symbols-outlined">arrow_circle_left</span></button>
+
+                            <button><span class="material-symbols-outlined">arrow_circle_right</span></button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+    </main>
 </body>
 </html>
