--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ sports_esports
 
                     <div class="carousel">
                         <div class="carousel-track">
-                            <article class="carousel-item"><img src="./assets/image/Media-1.png" alt=""><span class="metrial-symbols-outlined">play_circle</span></article>
+                            <article class="carousel-item"><img src="./assets/Media-1.png" alt=""><span class="material-symbols-outlined">play_circle</span></article>
 
-                            <article class="carousel-item"><img src="./assets/image/Media-2.png" alt=""><span class="metrial-symbols-outlined">play_circle</span></article>
+                            <article class="carousel-item"><img src="./assets/Media-2.png" alt=""><span class="material-symbols-outlined">play_circle</span></article>
 
-                            <article class="carousel-item"><img src="./assets/image/Media-3.png" alt=""><span class="metrial-symbols-outlined">play_circle</span></article>
+                            <article class="carousel-item"><img src="./assets/Media-3.png" alt=""><span class="materiall-symbols-outlined">play_circle</span></article>
 
                         </div>
                         <div class="carousel-controls">
