Agregamos id a las secciones

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ rel="stylesheet">
                 <img src="./assets/Warhammer logo.svg" alt="logo">
             </div>
         <ul class="navbar-menu">
-            <li><a href="#">Characters</a></li>
-            <li><a href="#">Media</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Concepts</a></li>
-            <li><a href="#">Merch</a></li>
+            <li><a href="#Characters">Characters</a></li>
+            <li><a href="#Media">Media</a></li>
+            <li><a href="#Abou">About</a></li>
+            <li><a href="#Concepts">Concepts</a></li>
+            <li><a href="#Merch">Merch</a></li>
         </ul>
 
         <button class="button-primary">Star game <span class="material-symbols-outlined">
@@ -40,7 +40,7 @@ sports_esports
     
     <main>
 
-        <section class="hero">
+        <section class="hero" id="hero">
             <div class="hero-content">
 
                 <h1>
@@ -69,7 +69,7 @@ sports_esports
         </section>
 
     
-   <section class="characters">
+   <section class="characters" id="characters">
                 <div class="wrapper">
 
                     <div class="characters-header">
@@ -104,7 +104,7 @@ sports_esports
                 </div>
             </section>
 
-            <section class="media">
+            <section class="media" id="media">
                 <div class="wrapper">
                     <div class="media-header">
                         <h2>Media</h2>
