--- a/index.html
+++ b/index.html
@@ -129,6 +129,30 @@ sports_esports
                 </div>
             </section>
 
+            <section class="about" id="about">
+
+            <div class="wrapper">
+                <div class="about-image">
+                    <img src="./assets/Warhammer logo.svg" alt="Símbolo Desarrollador">
+                </div>
+                <div class="about-content">
+                <h2>Developer</h2>
+
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut beatae laudantium enim itaque suscipit
+                    nesciunt voluptatibus minus officia sapiente illo earum voluptates deleniti perferendis illum
+                    tempore, amet voluptate cum debitis.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur quas est at culpa vitae
+                    voluptatibus ad, enim nihil laborum alias hic porro voluptatem doloribus quo voluptates ratione.
+                    Saepe, quibusdam excepturi!
+                </p>
+            </div>
+
+            </div>
+
+            
+        </section>
+
     </main>
 </body>
 </html>
